Added three new web pages named red, green and blue.

--- a/blue.html
+++ b/blue.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <h1>Learn GitHub</h1>
+    <h1>Learn GitHub - The Blue Page</h1>
     <p>This is a sample website to be used for learning useful GitHub features.</p>
     <p>Use it as a template to create additional pages.</p>
     <p>We'll add more HTML code later.</p>
