--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <p>This is a sample website to be used for learning useful GitHub features.</p>
     <p>Use it as a template to create additional pages.</p>
     <p>We'll add more HTML code later.</p>
+    <p>Here are links to three other pages:</p>
+    <ul>
+        <li><a href=red.html>Red</a></li>
+        <li><a href=green.html>Green</a></li>
+        <li><a href=blue.html>Blue</a></li>
+    </ul>
 
 </body>
 
