--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Learn GitHub</title>
     
     <style>
-        background-color: orange;
+	body {
+		background-color: orange;
+	}
+        
     </style>
 </head>
 
