Added one image to index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <li><a href=blue.html>Blue</a></li>
     </ul>
 
+	<p>Here is an image:</p>
+	<p>
+	<img alt="BlueHills,jpg" height="300" longdesc="Blue hils with trees." src="images/Blue%20hills.jpg" width="400"></p>
+
 </body>
 
 </html>
