Added one image to each page.

--- a/green.html
+++ b/green.html
@@ -11,6 +11,11 @@
     <p>This is a sample website to be used for learning useful GitHub features.</p>
     <p>Use it as a template to create additional pages.</p>
     <p>We'll add more HTML code later.</p>
+    
+    <p>Here is an image:</p>
+	<p>
+	<img alt="Winter.jpg" height="300" src="images/Winter.jpg" width="400"></p>
+
 
 </body>
 
