--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<p>Here is an image:</p>
 	<p>
-	<img alt="BlueHills,jpg" height="300" longdesc="Blue hils with trees." src="images/Blue%20hills.jpg" width="400"></p>
+	<img alt="BlueHills,jpg" height="300" src="images/Blue%20hills.jpg" width="400"></p>
 
 </body>
 
