--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
         <li><a href=blue.html>Blue</a></li>
     </ul>
 
-	<p>Here is an image:</p>
-	<p>
-	<img alt="BlueHills,jpg" height="300" longdesc="Blue hils with trees." src="images/Blue%20hills.jpg" width="400"></p>
+    <p>Here is an image:</p>
+    <p>
+    <img alt="BlueHills,jpg" height="300" longdesc="Blue hils with trees." src="images/Blue%20hills.jpg" width="400">
+    </p>
+	
+	<p>Here is a login form:</p>
+	<form id="login-form">
+      <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+      <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+      <input type="submit" value="Login" id="login-form-submit">
+    </form>
 
 </body>
 
