Minor form text update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <img alt="BlueHills,jpg" height="300" longdesc="Blue hils with trees." src="images/Blue%20hills.jpg" width="400">
     </p>
 	
-	<p>Here is a login form:</p>
+	<p>Here is a simple HTML login form:</p>
 	<form id="login-form">
       <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
       <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
